--- a/src/components/ui/HeaderPage.astro
+++ b/src/components/ui/HeaderPage.astro
@@ -1,13 +1,14 @@
 ---
-const { title, subtitle = "", color = "blue" } = Astro.props;
+const { title, subtitle = "", color = "blue", stackActionsOnMobile = false } = Astro.props;
+const headerClass = `page-header ${color}-header${stackActionsOnMobile ? " page-header-stack" : ""}`;
 ---
 
-<header class={`page-header ${color}-header`}>
+<header class={headerClass}>
   <div>
     <h1>{title}</h1>
     {subtitle && <p>{subtitle}</p>}
   </div>
-  <div>
+  <div class="page-header-actions">
     <slot />
   </div>
 </header>
