--- a/src/pages/orcamentos/consulta.astro
+++ b/src/pages/orcamentos/consulta.astro
@@ -13,7 +13,7 @@ const activePage = "orcamentos";
     color="purple"
     stackActionsOnMobile={true}
   >
-    <div>
+    <div class="mobile-stack-buttons">
       <a class="btn btn-primary" href="/orcamentos/importar">Importar orcamento</a>
       <a class="btn btn-light" href="/orcamentos/criar">Criar orcamento</a>
     </div>
